Fix a bug in KisConvolutionWorkerFFTW

Kernel's m_absoluteOffset[channel] should be added after we
unmultiply alpha. Doing otherwise breaks edge detection kernels.

BUG:413317